# gomoku

./: ADVANCED_AI_FEATURES.md  Cargo.toml  ENHANCED_MOVE_ORDERING.md  MULTITHREADING.md  PARALLEL_MINIMAX_GUIDE.md  PRECOMPUTATION_ANALYSIS.md  PRIORITY_2_IMPLEMENTATION.md  THEMES.md  USAGE_EXAMPLE.md  debug_test_analysis.rs  test_hash_symmetry.rs
assets/themes/: synthwave_theme.json
config/: config.json
examples/: advanced_ai_demo.rs  benchmark_eval_cache.rs  debug_parallel_test.rs  debug_test_analysis.rs  debug_tt_interference.rs  test_eval_cache.rs  theme_test.rs  transposition_demo.rs
src/: lib.rs  main.rs
src/ai/: advanced_search.rs  minimax.rs  (+17 more)
tests/: advanced_pattern.rs  bitboard.rs  debug_position.rs  test_ai_analysis.rs  test_ai_debug.rs  test_ai_defense.rs  test_ai_move_validation.rs  test_bitboard_advanced_performance.rs  test_bitboard_performance.rs  test_blocking_scenarios.rs  test_board.rs  test_capture_debug.rs  test_captures.rs  test_captures.rs.bak  test_diagonal_blocking_bug.rs  test_diagonal_verification.rs  test_double_three.rs  test_dynamic_heuristic.rs  test_enhanced_minimax.rs  test_enhanced_move_ordering.rs  test_game_flow.rs  test_hash_debug.rs  test_hash_symmetry.rs  test_heuristic.rs  test_integration.rs  test_iterative_deepening.rs  test_lazy_smp.rs  test_minimax.rs  test_move_generation.rs  test_move_ordering.rs  test_moves.rs  test_moves.rs.bak  test_mtdf.rs  test_multithreading.rs  test_multithreading_benchmark.rs  test_parallel_minimax.rs  test_parallel_winning_detection.rs  test_pattern_history.rs  test_rules.rs  test_shared_tt.rs  (+5 more)
(+49 files in other folders)
