[package]
name = "gomoku"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_audio", "png", "jpeg", "mp3", "wav"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
